// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenceHeader renders if is isB2cPartnershipLicence 1`] = `
<h1 class="ncf__header ncf__center">
  Welcome to the Financial Times
</h1>
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
</div>
`;

exports[`LicenceHeader renders if is trial 1`] = `
<h1 class="ncf__header ncf__center">
  Start your free trial
</h1>
`;

exports[`LicenceHeader renders if url is defined 1`] = `
<h1 class="ncf__header ncf__center">
  <span class="light-licence-text">
    Great news
  </span>
  <span class="light-licence-text">
    has an FT Subscription you can join
  </span>
</h1>
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
  <div>
    <a href="https://mytest.com"
       class="ncf__button--secondary mid-width-button"
    >
      Sign in
    </a>
  </div>
</div>
`;

exports[`LicenceHeader renders with custom display name 1`] = `
<h1 class="ncf__header ncf__center">
  <span class="light-licence-text">
    Great news
  </span>
  <span class="bold-licence-text">
    displayName
  </span>
  <span class="light-licence-text">
    has an FT Subscription you can join
  </span>
</h1>
<div class="ncf__center">
  <p>
    Have you already joined the
    <span class="bold-licence-text">
      displayName
    </span>
    account?
  </p>
</div>
`;

exports[`LicenceHeader renders with custom welcome text (that requires escaping, e.g. ampersand) 1`] = `
<h1 class="ncf__header ncf__center">
  <span class="light-licence-text">
    Great news
  </span>
  <span class="light-licence-text">
    has an FT Subscription you can join
  </span>
</h1>
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
</div>
<p>
  Welcome text & some more welcome text
</p>
`;

exports[`LicenceHeader renders with default props 1`] = `
<h1 class="ncf__header ncf__center">
  <span class="light-licence-text">
    Great news
  </span>
  <span class="light-licence-text">
    has an FT Subscription you can join
  </span>
</h1>
<div class="ncf__center">
  <p>
    Have you already joined the  account?
  </p>
</div>
`;
